--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Katas 01</title>
+    <title>Entrega- Katas de JavaScript 1</title>
+    <script src="katas1.js"></script>
 </head>
 <body>
-    <script src="katas1.js"></script>
+    <h1>Entrega- Katas de JavaScript 1</h1>
+
 </body>
 </html>
